--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
                 <div class="footer-section">
                     <h3 class="footer-title">Contact Us</h3>
                     <ul class="footer-list">
-                        <li><i class="fas fa-envelope"></i> <a href="mailto:info@msolutions.com">info@msolutions.com</a></li>
+                        <li><i class="fas fa-envelope"></i> <a href="mailto:info@msolutions.com">msolutions.ac.ke@gmail.com</a></li>
                         <li><i class="fas fa-phone"></i> <a href="tel:+254115594826">+254 115 594 826</a></li>
-                        <li><i class="fas fa-map-marker-alt"></i> Kennedy Muritu | TechHub Solutions | Sparkle Laundry Home</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Kennedy Muritu | M Solutions</li>
                     </ul>
                 </div>
                 
