Correct Affiliate link

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                         <p class="product-description">Premium tech accessories - headphones, earbuds, smartwatches, and more. Use our exclusive discount code: mt508zeb</p>
                         <div class="product-footer">
                             <span class="product-price" style="font-size: 1rem;">Exclusive Deals</span>
-                            <a href="https://wa.me/p/24595551206722611/254115594826" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">Shop Now</a>
+                            <a href="https://ke.oraimo.com/?affiliate_code=ntxl3vke" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">Shop Now</a>
                         </div>
                     </div>
                 </div>
