--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <div class="container">
             <nav class="navbar">
                 <div class="logo">
-                    <img src="./assets/images/logo.png" alt="M Solutions Logo" class="logo-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
-                    <span class="logo-text">M Solutions</span>
+                    <img src="./assets/images/Logo (2).png" alt="M Solutions Logo" class="logo-img" onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
+                    <span class="logo-text">Solutions</span>
                 </div>
                 <ul class="nav-menu">
                     <li><a href="#home" class="nav-link">Home</a></li>
