Add dark/light mode toggle
- Theme toggle button in header with sun/moon icons
- Dark mode CSS variables with inverted color scheme
- Smooth transitions between themes
- Persists preference in localStorage
- Respects system preference on first visit
- Dark mode specific overrides for images and buttons

--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@ Tech Stack:
                         <i class="fas fa-phone"></i>
                         <span>0115 594 826</span>
                     </a>
+                    <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">
+                        <i class="fas fa-sun icon-sun"></i>
+                        <i class="fas fa-moon icon-moon"></i>
+                    </button>
                     <button class="cart-btn" id="cart-toggle" aria-label="Open cart">
                         <i class="fas fa-shopping-bag"></i>
                         <span class="cart-badge" id="cart-count">0</span>
